Version 0.3.1
=============

06.06.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Refactoring: renamed lists to categories
  * Updated jquery and jquery versions to 1.4.2 and 1.8.2 respectively
  * Renamed README to README.rdoc to use markdown

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Fixed migration lists_to_categories
  * Optimized select (n+1) when displaying users with categories (users/index page)


Version 0.3
===========

03.06.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Moved today topic into application configuration
  * Reoreder position of the items in the main menu

02.06.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented: Permalink to tweet
  * Renamed column tweet_id to original_tweet_id in tweets table (list_tweets table has column with same name and there was a problem in habtm relation)

01.06.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Changed trending topic to #140mk
  * Moved the menu to the right

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Always redirect to twitter site on https protocol for safe entering of credentials

31.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Switched to Rails 2.3.8
  * Added 'about service' page

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * When user for the first time comes to settings page, do not display deactivate link, but link to tweet area
  * Changed style of deactivate link to be same as back to tweet area link
  * Cut text of select categories description to fit the whole line

30.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated the favicon
  * Adjusted sidebar header font in the category view

29.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Changed consumer token to use the new application (140_mk_bot)
  * Bugfixes:
    - Tweet overlay is now closing properly

  Dalibor Nasevic <dalibor.nasevic@gmail.com>