@@ -1,0 +1,3 @@
+set :deploy_to, "/home/blitzkrieg/apps/#{application}"
+set :rails_env, "production"
+set :branch, "stable"
