@@ -1,0 +1,3 @@
+set :deploy_to, "/home/blitzkrieg/apps/#{application}-dev"
+set :rails_env, "development"
+set :branch, "master"
