@@ -7,6 +7,7 @@ Version 0.3.1
   * Refactoring: renamed lists to categories
   * Updated jquery and jquery versions to 1.4.2 and 1.8.2 respectively
   * Renamed README to README.rdoc to use markdown
+  * Added new capistrano environment for staging version
 
   Dalibor Nasevic <dalibor.nasevic@gmail.com>
   * Fixed migration lists_to_categories
